# vibekek

./: .clinerules  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp_discovery.json  .token  AGENTS.md  PAGERANK_FEATURE.md  README.md  ci.py  clean-worktrees.py  config.json  config.jsonc  gen_ordered_requirements.py  generate_dag.py  install-sccache-dist.sh  pull_rag_cache.py  pyproject.toml  pytest.ini  requirements.txt  sccache-config.toml  sccache-dist.toml  setup.py  start-sccache-dist.sh  start-sccache.sh  validate.py  verify.py  verify_requirements.py  workflow.jsonc  workflow.py
.agent/: MEMORY.md
.claude/: mcp_config.md  settings.local.json
.copilot/: mcp-config.json
.cursor/: mcp.json
.gemini/: GEMINI.md  mcp_config.json  settings.json
.rag/: mcp_server.py  mcp_server_wrapper.py  mcp_server_wrapper.sh  rag_config.json  requirements.txt  store.py  test_mcp_tools.py
.tools/: .gitignore  ci.py  config.json  config_utils.py  mcp_server_wrapper.py  setup_mcp.py
docs/: agents.md
example_configs/: config-rag-only.json  config-semantic-only.json  config.json  mcp-config-example.json
harness/: harness.py  pytest.ini
input/: project-description.md
prompts/: add_task.md  adversarial_review.md  conflict_resolution_review.md  cross_phase_review.md  dag_tasks.md  dag_tasks_review.md  deduplicate_requirements.md  e2e_interfaces.md  extract_requirements.md  feature_brief_template.md  feature_discuss.md  feature_execute.md  feature_gates.md  feature_spec.md  filter_meta_requirements.md  final_review.md  fix_description_length.md  (+40 more)
xtask/: Cargo.toml  __init__.py
xtask/src/: ci.rs  environment.rs  main.rs  main_tests.rs  shell.rs
(+149 files in other folders)
